# DotNameBot

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  Makefile  README.md  conanfile.py  meson.build
.github/workflows/: ci.yml  windows.yml
application/src/: Application.cpp
application/tests/: AssetManagerTest.cpp  ConsoleLoggerTest.cpp  FileReaderTest.cpp  MockAssetManager.hpp
assets/: customstrings.json  ems-mini.html  rssUrls-examples.json
cmake/: project-application.cmake  project-common.cmake  project-library.cmake  tmplt-sanitizer.cmake
docs/html/: Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  AssetManagerFactory_8hpp_source.html  AssetManagerTest_8cpp.html  AssetManagerTest_8cpp__incl.map  AssetManagerTest_8cpp__incl.md5  AssetManager_8hpp_source.html  ConsoleLoggerTest_8cpp.html  ConsoleLoggerTest_8cpp__incl.map  ConsoleLoggerTest_8cpp__incl.md5  ConsoleLogger_8hpp_source.html  CustomStringsLoader_8hpp_source.html  DirectoryManager_8hpp_source.html  DiscordBot_8cpp.html  DiscordBot_8cpp.js  DiscordBot_8cpp__incl.map  DiscordBot_8cpp__incl.md5  DiscordBot_8hpp.html  DiscordBot_8hpp.js  DiscordBot_8hpp__dep__incl.map  DiscordBot_8hpp__dep__incl.md5  DiscordBot_8hpp__incl.map  DiscordBot_8hpp__incl.md5  (+484 more)
nix/: cross-shell-aarch64.nix  cross-shell-windows.nix  flake.nix
scripts/: bundle-deps.sh  solution-controller.sh
src/: DotNameBotLib.cpp
tests/: AssetManagerTest.cpp  ConsoleLoggerTest.cpp  FileReaderTest.cpp  MockAssetManager.hpp  RssFeedLiveTest.cpp  RssManagerTest.cpp  meson.build
(+402 files in other folders)
